[package]
name = "send_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aggligator = "0.2.0"
aggligator-util = "0.2.1"
tokio = {version="1.23.0", features=["rt"]}
tokio-util = {version="0.7.4", features=["codec"]}
futures-util = "0.3.25"
prost = "0.11.3"
log = "0.4.17"
env_logger = "0.10.0"
debug-ignore = "1.0.3"

[build-dependencies]
prost-build = "0.11.4"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8.5"
serial_test = "0.10.0"